# Android-SMS-API

./: .env.sample  .gitignore  README.md  app.py  main.py  pyproject.toml
models/: adb.py  authentication.py  errors.py
routes/: adb.py  authentication.ignore.py  authentication.py  health.py  status.py
utils/: adb.py  adb_wireless.py  database.py  logger.py  mongodb-depracted.py  mongodb.py  scheduler.py  secure.py
utils/models/: database.py  mongodb.py
